--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -65,6 +65,7 @@ on:
           - SGFDevices
           - ZeroRhythm
           - MustfunBoard
+          - SplitFoxPro
 
 env:
   BUILD_TYPE: Release
