--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -2,9 +2,9 @@ name: CMake
 
 on:
   push:
-    branches: [ "main", "j-zhao" ]
+    branches: [ "j-zhao" ]
   pull_request:
-    branches: [ "main", "j-zhao" ]
+    branches: [ "j-zhao" ]
 #  pull_request_target:
 #    branches: [ "main" ]
   workflow_dispatch:
